--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>My HTML project</title>
+		<link rel="stylesheet" type="text/css" 
+href="css/style.css">
 	</head>
 	<body>
 	</body>
